style(fundmanager): i18n add zh, cn, vi

--- a/src/i18n/locales/cn/conditions.json
+++ b/src/i18n/locales/cn/conditions.json
@@ -52,19 +52,19 @@
   "internetConnectivityFailure": "国际互联网故障",
   "sinceWCGCannotControl": "由于WCG无法控制讯号能力，讯号通过互联网和路由的接收，视乎客户设备的结构或连接的可靠性，WCG不对互联网上交易中出现的通讯故障、失真或延迟负责。",
   "marketRiskAndOnlineTrading": "市场风险和网上交易",
-  "customersMustKeepThePassword": "客户必须将密码保密存放，确保第三者无法取用交易设施。客户同意对所有经电邮传送来的训示和对所有经由电邮、口头或书面向WCG發出的训示确实负责，即使是由第三者發出，这些训示已和客户密码和帐户号码认证，根据WCG的判断相信是客户表面授权。WCG并没有责任对这个表面许可权作进一步査询，也没有责任因为依据这些训示或表面许可权所采的行动或不採取行动所造成的后果负责。",
+  "customersMustKeepThePassword": "客户必须将密码保密存放，确保第三者无法取用交易设施。客户同意对所有经电邮传送来的训示和对所有经由电邮、口头或书面向WCG發出的训示确实负责，即使是由第三者發出，这些训示已和客户密码和账户号码认证，根据WCG的判断相信是客户表面授权。WCG并没有责任对这个表面许可权作进一步査询，也没有责任因为依据这些训示或表面许可权所采的行动或不採取行动所造成的后果负责。",
   "passwordProtection": "密码保护",
   "incorrectPriceQuotation": "报价错误",
-  "whenQuotationOrTransaction": "当某些报价或成交价错误發生时，WCG将不为此错误所导致的帐户馀额错误负责。这些错误包括但不限于：交易员的错误报价、非国际市场价之报价，或是任何报价错误（例如：硬体，软件或网络之问题，或是第三者所提供之错误数据）。WCG不需为错误所导致的帐户馀额负责。下单时需预留足够的时间执行订单和系统计算所需保证金的时间。订单的执行价格或订单设定和市场价格过于接近的话，可能会触發其他订单（不论是那种订单类型）或發出保证金提示。WCG不会对由于系统没有足够时间执行订单或进行运算所产生的保证金提示、帐户结馀或帐户仓位负责。上文不得视作内容尽列，一旦發生报价或执行错误，WCG将保留作任何更正或调整的权力，任何有关报价与成交错误之争执只能由WCG完全自主决定解决。若囙此使WCG有任何损失、损害或责任，客户同意予以赔偿使WCG不受损害。",
+  "whenQuotationOrTransaction": "当某些报价或成交价错误發生时，WCG将不为此错误所导致的账户馀额错误负责。这些错误包括但不限于：交易员的错误报价、非国际市场价之报价，或是任何报价错误（例如：硬体，软件或网络之问题，或是第三者所提供之错误数据）。WCG不需为错误所导致的账户馀额负责。下单时需预留足够的时间执行订单和系统计算所需保证金的时间。订单的执行价格或订单设定和市场价格过于接近的话，可能会触發其他订单（不论是那种订单类型）或發出保证金提示。WCG不会对由于系统没有足够时间执行订单或进行运算所产生的保证金提示、账户结馀或账户仓位负责。上文不得视作内容尽列，一旦發生报价或执行错误，WCG将保留作任何更正或调整的权力，任何有关报价与成交错误之争执只能由WCG完全自主决定解决。若囙此使WCG有任何损失、损害或责任，客户同意予以赔偿使WCG不受损害。",
   "arbitrage": "套戥",
-  "internetIssues": "互联网、联机延误及报价上的误差有时会造成在WCG交易平臺上显示的报价无法准确地反映实时市场价格。“套戥”及“切汇”，或因网络联机的延误而利用差价获利的行为，并不能存在于客户直接向庄家进行买卖的场外交易市场中。WCG不容许客户在本公司的交易平臺上进行此等套戥行为。依靠因价格滞后带来的套戥机会所进行的交易有可能会被撤销。WCG保留权利对涉及上述交易的帐户进行必要的修改和调整。WCG可全权酌情决定要求交易员进行干预或核准所有下单以及或终止有关客户的帐户。WCG可完全自主解决因套戥或操控价格而产生的纠纷。WCG保留扣起取款的权利直至以上的问题能够解决。在此陈述的任何行动或决议将不会损害或令WCG对客户和其职员放弃拥有的任何权力或赔偿。",
+  "internetIssues": "互联网、联机延误及报价上的误差有时会造成在WCG交易平臺上显示的报价无法准确地反映实时市场价格。“套戥”及“切汇”，或因网络联机的延误而利用差价获利的行为，并不能存在于客户直接向庄家进行买卖的场外交易市场中。WCG不容许客户在本公司的交易平臺上进行此等套戥行为。依靠因价格滞后带来的套戥机会所进行的交易有可能会被撤销。WCG保留权利对涉及上述交易的账户进行必要的修改和调整。WCG可全权酌情决定要求交易员进行干预或核准所有下单以及或终止有关客户的账户。WCG可完全自主解决因套戥或操控价格而产生的纠纷。WCG保留扣起取款的权利直至以上的问题能够解决。在此陈述的任何行动或决议将不会损害或令WCG对客户和其职员放弃拥有的任何权力或赔偿。",
   "price": "价格、订单执行及平臺操控",
-  "WCGStrictlyProhibits": "WCG严禁任何帐户以任何形式对其价格、执行及平臺进行操控。若WCG怀疑任何帐户从事操控，WCG保留对帐户进行调查及复核的权利，并从涉嫌帐户中扣除由相关活动所赚取的盈利款项。WCG保留对相关帐户进行必要更正或调整的权利。对于涉嫌从事操控的帐户，WCG可全权酌情决定，要求交易员进行干预、对下单进行核准以及或终止有关客户的帐户。对于由套戥以及或操控所产生的任何纠纷，由WCG完全自主决定。WCG可酌情决定向任何相关监管机构或执法机构报告有关事件。此处所陈述的任何行动或决议并不免除或损害WCG对客户和其职员拥有之权利或赔偿，所有均为明确保留的权利或赔偿。",
+  "WCGStrictlyProhibits": "WCG严禁任何账户以任何形式对其价格、执行及平臺进行操控。若WCG怀疑任何账户从事操控，WCG保留对账户进行调查及复核的权利，并从涉嫌账户中扣除由相关活动所赚取的盈利款项。WCG保留对相关账户进行必要更正或调整的权利。对于涉嫌从事操控的账户，WCG可全权酌情决定，要求交易员进行干预、对下单进行核准以及或终止有关客户的账户。对于由套戥以及或操控所产生的任何纠纷，由WCG完全自主决定。WCG可酌情决定向任何相关监管机构或执法机构报告有关事件。此处所陈述的任何行动或决议并不免除或损害WCG对客户和其职员拥有之权利或赔偿，所有均为明确保留的权利或赔偿。",
   "bankruptcyDisclosure": "破产披露",
   "theTransactionsBetween": "客户跟WCG进行的交易并不是在交易所进行。一旦WCG破产，客户向WCG追回有关存入资金或在交易赚取的利益，可能不会得到优先偿还权。没有优先偿还权，客户就是无抵押债权人，会在偿付那些优先索偿后才跟其他债权人获得补偿。",
   "introducingBrokerDisclosure": "介绍人披露",
   "WCGDoesNotSupervise": "WCG并不监管介绍人的活动，不对介绍人作出的任何声明承担责任。WCG和介绍人相互完全独立。WCG和介绍人直接的协定并不建立合资企业或合伙企业关係。介绍人不是WCG的代理人或职员。",
-  "theClientUnderstandsAndAgrees": "客户瞭解并同意如果客户在WCG的帐户是由介绍人引荐而来，介绍人可能获得客户的个人资料及其他有关客户在WCG帐户交易活动的数据。客户瞭解并同意，如果客户在WCG的帐户是经介绍人引荐而来，介绍人不得以客户的WCG帐户从事交易，除非客户通过授权协议授权介绍人代表客户交易。",
+  "theClientUnderstandsAndAgrees": "客户瞭解并同意如果客户在WCG的账户是由介绍人引荐而来，介绍人可能获得客户的个人资料及其他有关客户在WCG账户交易活动的数据。客户瞭解并同意，如果客户在WCG的账户是经介绍人引荐而来，介绍人不得以客户的WCG账户从事交易，除非客户通过授权协议授权介绍人代表客户交易。",
   "becauseTheRisk": "因为差价合约交易的风险因素很高，只有真正的“风险”资金可以用于这类交易。如果客户并无盈馀资金可供损失，客户不应在差价合约市场上交易。",
   "theClientUnderstands": "客户理解介绍人或很多出售交易系统的第三者、课程、程式、研究或建议可能不受政府机构监管。",
   "ifTheCustomer": "如果客户以前被告知或相信使用任何第三者的交易系统，课程、程式、或由介绍人或其他第三者提供的研究或建议会带来交易盈利，客户在此确认，同意和理解所有差价合约交易，包括通过任何第三者的交易系统。"
