--- a/src/i18n/locales/cn/cryptocurrencies.json
+++ b/src/i18n/locales/cn/cryptocurrencies.json
@@ -6,7 +6,7 @@
   "advantagesOfCryptoCurrency": "虚拟货币优势",
   "inViewOfBitcoinsRole": "鑑于比特币在对冲风险中的作用，这款虚拟货币被比喻为新黄金。除着区块链技术發展，比特币(Bitcoin)、以太币(Ethereum)、莱特币(Litecoin)等虚拟货币的投资及买卖在金融市场上逐渐普及。虚拟货币的大幅度价格波动，让投资者有机会快速地捕捉潜在利润。",
   "theCFDSystem": "差价合约系统",
-  "asAGlobalCurrency": "为一种全球货币，比特币不受任何一个国家货币政策，经济指标或地缘政治困境的变化所影响。透过WCG的交易平台，您无需投入全部资金即可利用CFD(差价合约)以保证金参与虚拟货币投资。立即开立实时或模拟帐户，试用我们最先进快捷的交易系统。",
+  "asAGlobalCurrency": "为一种全球货币，比特币不受任何一个国家货币政策，经济指标或地缘政治困境的变化所影响。透过WCG的交易平台，您无需投入全部资金即可利用CFD(差价合约)以保证金参与虚拟货币投资。立即开立实时或模拟账户，试用我们最先进快捷的交易系统。",
   "howToTradeCryptoCurrency": "如何交易数字货币",
   "cryptoCurrencyTransactions": "数字交易在很多方面与外汇交易很相似，我们的数字货币以美元或欧元报价，您可以双向它们对您所选择的报价货币的价格变动。",
   "ifYouSpeculate": "如您认为比特币（Bitcoin）相对美元会升值，则可以买进BTC/USD这个产品。买进之后，如价格往有利于您的方向移动，您则可以获利；若是价格往不利于您的方向移动，您则会出现亏损。",
