--- a/src/i18n/locales/cn/notice.json
+++ b/src/i18n/locales/cn/notice.json
@@ -7,13 +7,13 @@
   "whenTheCustomerWithdrawsMoney": "当客户取款时，我们会审核客户上次取款（首次取款则从开户开始）至本次取款的所有交易，按照交易量统计，当交易单中有50%交易量的持仓时间低于5分钟时，我们就会对此账户进行进一步审核，审核时间需要延长3小时。",
   "whenThereIs": "当疑似异常交易的交易单中有30%交易量的持仓时间低于5分钟时。",
   "when30OfThe": "当疑似异常交易的交易单中有30%交易量属于5分钟内建立的对冲锁仓单。",
-  "whenClientIsUsing": "客户使用同一帐户并同时利用多台计算器终端机进行交易行为，意图以＂密集式交易＂手段令市场造成巨大成交额的误导资讯。",
+  "whenClientIsUsing": "客户使用同一账户并同时利用多台计算器终端机进行交易行为，意图以＂密集式交易＂手段令市场造成巨大成交额的误导资讯。",
   "whenCustomersAreTackling": "客户借助协力厂商软体（即＂外挂软体＂）利用软体漏洞进行交易的行为。（如需使用自动代程式交易，请联系线上客服人员）",
   "aTradeOfUtilizing": "利用互联网或计算器＂报价延误＂，＂多次＂故意或＂恶意＂在5分钟之内＂重仓＂进出，并且在短时间之内赚取交易平台非市场价格的价差的一种交易。",
   "whenTheNumber": "当疑似异常交易的交易数量跟过往的存在甚大差异，如瞬间由0.1至0.5手转变为5至10手交易。",
   "handlingMethod": "处理方法",
   "ifTheAccount": "如经本公司调查后，发现帐号在进行异常交易，本公司会马上冻结该帐号的交易和资金进出再作深入调查。",
-  "ifTheAccountIs": "如确认该帐号在进行异常交易，本公司会把该帐号注销，并把帐户的剩余资金发还客户，任何因异常交易所产生的利润和佣金不发放。",
+  "ifTheAccountIs": "如确认该帐号在进行异常交易，本公司会把该帐号注销，并把账户的剩余资金发还客户，任何因异常交易所产生的利润和佣金不发放。",
   "theRightToInterpret": "异常交易的解释权归WCG所有，如有任何争议，一切以WCG之决定为最终裁决。",
   "tradeDetails": "交易细则",
   "sourceOfTradeExecution": "执行来源",
