--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -1,6 +1,6 @@
 {
-  "openRealAccount": "开立真实帐户",
-  "openDemoAccount": "开立模拟帐户",
+  "openRealAccount": "开立真实账户",
+  "openDemoAccount": "开立模拟账户",
   "usersCenter": "客户中心",
   "iBCenter": "代理中心",
   "contactUs": "联系我们",
