--- a/src/i18n/locales/cn/footer.json
+++ b/src/i18n/locales/cn/footer.json
@@ -9,9 +9,9 @@
   "allTradesInvolveRisks": "所有交易均涉及风险，您的损失可能大于您的入金。",
   "newbiesGettingStarted": "新手入门",
   "getUSD": "免费获得 100,000 美元的模拟资金",
-  "demoAccount": "开立模拟帐户",
+  "demoAccount": "开立模拟账户",
   "startRealFXTrading": "开始真实的外汇交易",
-  "aRealAccount": "开立真实帐户",
+  "aRealAccount": "开立真实账户",
   "WCGIsABusinessBrand": "WCG是由多家公司共同使用的业务品牌，包括：",
   "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd 是位于圣文森特和格林纳丁斯群岛St.Vincent依据国际商业公司法注册的有限责任公司，公司编号为26087 BC 2020。注册地址是： The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
   "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd 获加拿大金融情报部门(FIU)加拿大金融交易和报告分析中心(FINTRAC)监管，MSB牌照编号为 M20282836。注册地址是： 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Canada.",
