--- a/src/i18n/locales/zh/fundManager.json
+++ b/src/i18n/locales/zh/fundManager.json
@@ -1,36 +1,36 @@
 {
-  "fundManager": "Fund manager",
-  "WCGProvidesAssetManagement": "WCG provides asset management solutions for fund managers， including the award-winning MT4 MAM (multi-account management) fund management tool to help our partners effectively manage client funds in a safe environment and grow side by side with us.",
-  "applyForManager": "Apply for manager",
-  "youCanTrade": "You can trade in the market through different position account systems. WCG provides the best analysis and trading tools (manual and algorithm). In addition， we will continue to provide automatic software updates to achieve fast and safe operation on any device.",
-  "makeFullUseOfAlgorithms": "Make full use of algorithms and trading opportunities to create， test and improve your strategies. Specify how to calculate parameters， set deadlines， maximize capital， value， and other investor requirements. Manage accounts and generate detailed reports to monitor customer transaction results in a unified way. Display any data on the graph， automatically calculate， manage operating balances， expenditures and handling fees.",
-  "WCGCanHelpYourFund": "WCG can help your fund to increase its income: your traders will be able to fully realize their potential and bring maximum profits to the fund， and its positive results will attract new investors to join.",
-  "scientificAndFlexibleManagement": "Scientific and flexible management",
-  "overTheYears": "Over the years， we have established a successful relationship with fund managers because we understand your needs",
-  "multiPersonAccountManagement": "Multi-person account management",
-  "usingTheWCGMAMManagementSystem": "Using the WCG MAM management system， money managers can quickly manage multiple accounts",
-  "efficientAccountControl": "Efficient account control",
-  "allowTradersToAdd": "Allow traders to add， delete or suspend the client at any time",
-  "optionalAllocationTypes": "Optional allocation types",
-  "multipleTransactionAllocationTypes": "Multiple transaction allocation types， depending on your trading style and size and types of client funds",
-  "multipleProductCategories": "Multiple product categories",
-  "multipleCurrencyProducts": "Multiple currency products， arbitrage exchange rates， precious metals， commodities and index CFDs， etc",
-  "fundManagersCan": "Fund managers can",
-  "openMainAccount": "Open main account",
-  "collectTheTradingHistory": "Collect the trading history of their accounts",
-  "manageInvestorAccounts": "Manage investor accounts",
-  "setANickname": "Set a nickname， set risk limits",
-  "setFees": "Set fees",
-  "investorsCan": "Investors can",
-  "lookForAFund": "Look for a fund investment manager",
-  "toOpenAn": "To open an investment account",
-  "toMakeDeposits": "To make deposits",
-  "subscribeToThe": "Subscribe to the main account",
-  "toViewTheir": "To view their account statistics",
-  "haveEverythingYouNeed": "Have everything you need",
-  "togetherWithWCG": "Together with WCG to establish a broad customer group， no matter the size of your business， you can use our excellent trading environment with abundant functionality to handle all your needs..",
-  "excellentTradingEnvironment": "Excellent trading environment to increase your income",
-  "aMultiAccountTradingPlatform": "A multi-account trading platform that can satisfy your needs",
-  "theBrokerYouNeed": "The broker you need with strong background for cooperation and support",
-  "iWantToBeAManager": "I want to be a manager"
+  "fundManager": "基金經理",
+  "WCGProvidesAssetManagement": "WCG為基金經理提供資產管理方案，包括屢獲殊榮的MT4MAM（多帳戶管理）的資金管理工具，協助我們的合作夥伴在安全的環境下有效管理客戶資金，與我們並肩成長。",
+  "applyForManager": "申請經理人",
+  "youCanTrade": "您可以通過不同持倉帳戶系統在市場進行交易，WCG提供最佳的分析和交易工具（手動和算法）。此外，我們還會繼續提供軟件自動更新，以在任何設備上實現快速安全的操作。",
+  "makeFullUseOfAlgorithms": "充分利用算法及交易機會，創建、測試和改進您的策略。指定如何計算參數、設置期限、最大資本化、價值和其他投資者要求。管理帳戶並生成詳細報告，以統一方式監控客戶的交易結果。顯示圖形上的任何數據、自動計算、管理操作結餘、支出和手續費。",
+  "WCGCanHelpYourFund": "WCG能夠幫助您的基金增加收入：您的交易者將能夠充分發揮其潛力並為基金帶來最大的盈利，而其積極的結果將又吸引新的投資者一同加入。",
+  "scientificAndFlexibleManagement": "科技化靈活管理",
+  "overTheYears": "多年以來，我們與基金經理建立了成功的關係，因為我們了解您的需求",
+  "multiPersonAccountManagement": "多人帳戶管理",
+  "usingTheWCGMAMManagementSystem": "使用WCG-MAM管理系統，資金經理就能迅速的管理多個帳戶",
+  "efficientAccountControl": "高效帳戶控制",
+  "allowTradersToAdd": "能夠隨時添加、刪除或暫停客戶端",
+  "optionalAllocationTypes": "可選分配類型",
+  "multipleTransactionAllocationTypes": "多種交易分配類型，具體取決於您的交易風格和客戶資金",
+  "multipleProductCategories": "多元產品類別",
+  "multipleCurrencyProducts": "多項貨幣產品、套匯匯率、貴金屬、商品和指數差價合約等",
+  "fundManagersCan": "基金經理可以",
+  "openMainAccount": "打開主帳戶",
+  "collectTheTradingHistory": "收集他們帳戶的交易歷史",
+  "manageInvestorAccounts": "管理投資者帳戶",
+  "setANickname": "設置一個暱稱，風險限額",
+  "setFees": "設置費用",
+  "investorsCan": "投資者可以",
+  "lookForAFund": "找一個基金投資經理",
+  "toOpenAn": "開立投資帳戶",
+  "toMakeDeposits": "進行存款",
+  "subscribeToThe": "訂閱主帳戶",
+  "toViewTheir": "查看其帳戶統計信息",
+  "haveEverythingYouNeed": "擁有您一切所需",
+  "togetherWithWCG": "與WCG一起建立一個廣泛的客戶群體，無論您的業務規模大小，都可以利用我們具有充裕功能性的出色交易環境，來處理您所有的需求。",
+  "excellentTradingEnvironment": "優秀的交易環境為您增加多收入",
+  "aMultiAccountTradingPlatform": "一個可以滿足您多帳戶交易平台",
+  "theBrokerYouNeed": "您需要的交易商大力合作與支持",
+  "iWantToBeAManager": "我想成為經理人"
 }
