feat: integrate i18n for partner section

--- a/src/i18n/locales/ms/whiteLabelCooperation.json
+++ b/src/i18n/locales/ms/whiteLabelCooperation.json
@@ -6,13 +6,13 @@
   "asALeading": "Sebagai broker terkemuka, kami bersedia untuk menyediakan semua yang anda perlukan untuk memulakan perniagaan baru, dari penciptaan laman web (jika diperlukan) hingga aktiviti sokongan dan pengurusan back-office yang luas. Kami menyediakan satu set lengkap produk dan perkhidmatan untuk penggunaan percuma anda. Untuk lebih menyokong perniagaan anda, kami menyediakan latihan khusus, sokongan pelanggan dan bimbingan kelas pertama. Platform perdagangan kami dapat disesuaikan sepenuhnya dan boleh dinamakan sempena nama syarikat dan tanda dagangan anda. Anda boleh memilih antara pelbagai model pendapatan dan imbuhan untuk memaksimumkan faedah anda.",
   "advancedEquipment": "Peralatan canggih dan tawaran menarik",
   "weWill": "Kami akan memberi kebenaran kepada pelanggan anda untuk menggunakan pelbagai produk kewangan dan melakukan transaksi melalui platform desktop dan mudah alih yang paling terkenal di peringkat antarabangsa",
-  "youFormulate": "Kami akan membantu anda untuk merumuskan strategi pengembangan perniagaan anda,termasuk merumuskan proses kerja utama dan mencegah masalah yang dapat diramal.",
+  "youFormulate": "Kami akan membantu anda untuk merumuskan strategi pengembangan perniagaan anda, termasuk merumuskan proses kerja utama dan mencegah masalah yang dapat diramal.",
   "extremelyLow": "Spread yang sangat rendah dan hasil yang tinggi",
   "weExclusively": "Kami secara eksklusif akan menyediakan syarat margin yang disesuaikan untuk menghasilkan low-spread price feed yang kompetitif.",
-  "provideComprehensive": "Kos permulaan yang sangat rendah",
-  "veryLow": "Mulakan pembrokeran white label pertukaran mata wang asing anda sendiri dari mana sahaja di dunia, dengan risiko dan kos yang rendah.",
-  "startYour": "Berdasarkan keuntungan setiap transaksi pelanggan",
-  "basedOn": "anda boleh menyemak secara real time berapa banyak pendapatan yang dijana oleh pelanggan untuk anda, serta komisen dan jumlah transaksi pelanggan serta statistik lain.",
+  "veryLow": "Kos permulaan yang sangat rendah",
+  "startYour": "Mulakan pembrokeran white label pertukaran mata wang asing anda sendiri dari mana sahaja di dunia, dengan risiko dan kos yang rendah.",
+  "basedOn": "Berdasarkan keuntungan setiap transaksi pelanggan",
+  "youCanCheck": "anda boleh menyemak secara real time berapa banyak pendapatan yang dijana oleh pelanggan untuk anda, serta komisen dan jumlah transaksi pelanggan serta statistik lain.",
   "createYourOwn": "Cipta jenama anda sendiri",
   "ourWhiteLabel": "Penyelesaian white label cooperation kami sangat hebat. Anda boleh bergantung pada platform kami yang kuat untuk membina komuniti perdagangan anda sendiri, menyediakan persekitaran perdagangan yang adil dan telus kepada pelanggan anda, menggunakan spread yang kompetitif dan memanfaatkan rancangan subsidi untuk memaksimumkan faedah.",
   "highQuality": "Platform perdagangan yang berkualiti tinggi",
