--- a/src/i18n/locales/cn/whiteLabelCooperation.json
+++ b/src/i18n/locales/cn/whiteLabelCooperation.json
@@ -9,10 +9,10 @@
   "youFormulate": "以帮助您制定业务发展战略，包括制定主要工作流程以及防止可预见的问题。",
   "extremelyLow": "极低点差与高收益",
   "weExclusively": "我们独家提供可定制的保证金要求，生成具有竞争力的低点差价格供给。",
-  "provideComprehensive": "极低的启动成本",
-  "veryLow": "从世界任何地方开始您自己的外汇白标经纪业务，风险小且成本低。",
-  "startYour": "基于每位客户交易的利润",
-  "basedOn": "实时地查询客户为您带来多少的收益，佣金和客户的交易量等统计数据。",
+  "veryLow": "极低的启动成本",
+  "startYour": "从世界任何地方开始您自己的外汇白标经纪业务，风险小且成本低。",
+  "basedOn": "基于每位客户交易的利润",
+  "youCanCheck": "实时地查询客户为您带来多少的收益，佣金和客户的交易量等统计数据。",
   "createYourOwn": "创建自己的品牌",
   "ourWhiteLabel": "我们的白标合作解决方案功能强大，您可以依赖于我们强大的平台，建立自己的交易圈，为您的客户提供公平而又透明的交易环境，利用富有竞争力的点差并从补贴计划中得到收益。",
   "highQuality": "高质量的交易平台",
