--- a/src/i18n/locales/id/whiteLabelCooperation.json
+++ b/src/i18n/locales/id/whiteLabelCooperation.json
@@ -9,14 +9,14 @@
   "youFormulate": "Kami dapat membantu Anda merumuskan strategi pengembangan bisnis Anda, termasuk merumuskan proses kerja utama dan mencegah masalah yang dapat diperkirakan.",
   "extremelyLow": "Spread sangat rendah dan hasil tinggi",
   "weExclusively": "Kami secara eksklusif menyediakan persyaratan margin yang disesuaikan untuk menghasilkan feed harga spread rendah yang kompetitif.",
-  "provideComprehensive": "Biaya awal yang sangat rendah",
-  "veryLow": "Mulailah bisnis pialang white label valuta asing Anda sendiri dari mana saja di dunia, dengan risiko rendah dan biaya rendah.",
-  "startYour": "Berdasarkan keuntungan transaksi setiap nasbah",
-  "basedOn": "Anda dapat memeriksa secara real time berapa banyak pendapatan yang dihasilkan pelanggan untuk Anda, serta komisi dan volume transaksi pelanggan serta statistik lainnya.",
+  "veryLow": "Biaya awal yang sangat rendah",
+  "startYour": "Mulailah bisnis pialang white label valuta asing Anda sendiri dari mana saja di dunia, dengan risiko rendah dan biaya rendah.",
+  "basedOn": "Berdasarkan keuntungan transaksi setiap nasbah",
+  "youCanCheck": "Anda dapat memeriksa secara real time berapa banyak pendapatan yang dihasilkan pelanggan untuk Anda, serta komisi dan volume transaksi pelanggan serta statistik lainnya.",
   "createYourOwn": "Buat merek Anda sendiri",
   "ourWhiteLabel": "Solusi kerjasama white label kami sangat kuat. Anda dapat mengandalkan platform kami yang kuat untuk membangun komunitas perdagangan Anda sendiri, menyediakan lingkungan perdagangan yang adil dan transparan bagi pelanggan Anda, menggunakan spread kompetitif dan memanfaatkan rencana subsidi untuk memaksimalkan keuntungan.",
   "highQuality": "Platform perdagangan berkualitas tinggi",
-  "wcgHasLongTerm": "WCG memiliki pengalaman jangka panjang dalam perdagangan valuta asing,serta pemahaman mendalam tentang pasar dan kebutuhan pelanggan, yang akan memastikan bahwa Anda berhasil mengoperasikan perusahaan pialang Anda sendiri melalui layanan white label. Teknologi kami yang canggih dan matang akan membantu Anda membuat strategi pengembangan, strategi pemasaran, dan proses operasi bisnis Anda sendiri.",
+  "wcgHasLongTerm": "WCG memiliki pengalaman jangka panjang dalam perdagangan valuta asing, serta pemahaman mendalam tentang pasar dan kebutuhan pelanggan, yang akan memastikan bahwa Anda berhasil mengoperasikan perusahaan pialang Anda sendiri melalui layanan white label. Teknologi kami yang canggih dan matang akan membantu Anda membuat strategi pengembangan, strategi pemasaran, dan proses operasi bisnis Anda sendiri.",
   "fullAccess": "Akses penuh",
   "realTime": "Fungsi pemantauan waktu real ",
   "customizedBackendSystem": "Sistem backend yang disesuaikan",
