--- a/src/i18n/locales/zh/whiteLabelCooperation.json
+++ b/src/i18n/locales/zh/whiteLabelCooperation.json
@@ -1,30 +1,30 @@
 {
-  "whiteLabel": "白标合作",
-  "wCGsWhite": "WCG的白标合作计划可以让您在外汇行业创立个人（或公司）的品牌。这是一个允许您使用自己的身份和网站来运行经纪商业务的解决方案。我们能为您提供优质的产品、功能齐全的交易平台、尖端科技与有竞争力条件来满足您客户的一切需求。",
-  "applyFor": "申请合作>",
-  "wCGWhite": "WCG白标战略",
-  "asALeading": "作为领先的经纪商，我们已经准备好为您提供启动新业务的一切所需，从创建网站（如果需要）到广泛的后台支持以及管理活动。我们提供全套的智汇产品与服务供您随意使用。为了进一步支持您的业务，我们提供专门的培训、客户支持和一流的指导。我们的交易平台是可以完全定制的，可以用您的公司名称和商标来命名。您可以在各种收益和报酬模式之间做出选择，来使您的利益得到最大化。",
-  "advancedEquipment": "先进设备与最佳条件",
-  "weWill": "我们会授权您的客户使用多种金融产品，并通过最受国际认可的桌面与手机平台来进行交易。我们可",
-  "youFormulate": "以帮助您制定业务发展战略，包括制定主要工作流程以及防止可预见的问题。",
-  "extremelyLow": "极低点差与高收益",
-  "weExclusively": "我们独家提供可定制的保证金要求，生成具有竞争力的低点差价格供给。",
-  "provideComprehensive": "极低的启动成本",
-  "veryLow": "从世界任何地方开始您自己的外汇白标经纪业务，风险小且成本低。",
-  "startYour": "基于每位客户交易的利润",
-  "basedOn": "实时地查询客户为您带来多少的收益，佣金和客户的交易量等统计数据。",
+  "whiteLabel": "白標合作",
+  "wCGsWhite": "WCG的白標合作計劃可以讓您在外匯行業創立個人（或公司）的品牌。這是一個允許您使用自己的身份和網站來運行經紀商業務的解決方案。我們能為您提供優質的產品、功能齊全的交易平台、尖端科技與有競爭力條件來滿足您客戶的一切需求。",
+  "applyFor": "申請合作>",
+  "wCGWhite": "WCG白標戰略",
+  "asALeading": "作為領先的經紀商，我們已經準備好為您提供啟動新業務的一切所需，從創建網站（如果需要）到廣泛的後台支持以及管理活動。我們提供全套的智匯產品與服務供您隨意使用。為了進一步支持您的業務，我們提供專門的培訓、客戶支持和一流的指導。我們的交易平台是可以完全定制的，可以用您的公司名稱和商標來命名。您可以在各種收益和報酬模式之間做出選擇，來使您的利益得到最大化。",
+  "advancedEquipment": "先進設備與最佳條件",
+  "weWill": "我們會授權您的客戶使用多種金融產品，並通過最受國際認可的桌面與手機平台來進行交易。我們可",
+  "youFormulate": "以幫助您制定業務發展戰略，包括制定主要工作流程以及防止可預見的問題。",
+  "extremelyLow": "極低點差與高收益",
+  "weExclusively": "我們獨家提供可定制的保證金要求，生成具有競爭力的低點差價格供給。",
+  "veryLow": "極低的啟動成本",
+  "startYour": "從世界任何地方開始您自己的外匯白標經紀業務，風險小且成本低。",
+  "basedOn": "基於每位客戶交易的利潤",
+  "youCanCheck": "實時地查詢客戶為您帶來多少的收益，佣金和客戶的交易量等統計數據。",
   "createYourOwn": "创建自己的品牌",
-  "ourWhiteLabel": "我们的白标合作解决方案功能强大，您可以依赖于我们强大的平台，建立自己的交易圈，为您的客户提供公平而又透明的交易环境，利用富有竞争力的点差并从补贴计划中得到收益。",
-  "highQuality": "高质量的交易平台",
-  "wcgHasLongTerm": "WCG在外汇交易中有着长期的经验，以及对市场和客户需求的深入了解，将保证您通过通过白标服务成功运作自己的经纪公司。我们的先进和成熟的技术，将帮助您创建自己的发展战略，营销策略和业务流程。",
+  "ourWhiteLabel": "我們的白標合作解決方案功能強大，您可以依賴於我們強大的平臺，建立自己的交易圈，為您的客戶提供公平而又透明的交易環境，利用富有競爭力的點差並從補貼計畫中得到收益。",
+  "highQuality": "高質量的交易平台",
+  "wcgHasLongTerm": "WCG在外匯交易中有着長期的經驗，以及對市場和客戶需求的深入了解，將保證您通過通過白標服務成功運作自己的經紀公司。我們的先進和成熟的技術，將幫助您創建自己的發展戰略，營銷策略和業務流程。",
   "fullAccess": "全面存取",
-  "realTime": "即时监控功能",
-  "customizedBackendSystem": "自定义后台系统",
-  "dedicated": "专属经理",
-  "assignADedicated": "指派专门经理",
-  "assistYourWork": "随时辅助工作",
-  "customerSupport": "客户支持",
-  "provideDevelopment": "提供开发支持",
-  "achieveBrandIntegration": "实现品牌整合",
-  "applyforWhite": "申请白标合作>"
+  "realTime": "即時監控功能",
+  "customizedBackendSystem": "自訂後台系統",
+  "dedicated": "專屬經理",
+  "assignADedicated": "指派專門經理",
+  "assistYourWork": "隨時輔助工作",
+  "customerSupport": "客戶支援",
+  "provideDevelopment": "提供開發支援",
+  "achieveBrandIntegration": "實現品牌整合",
+  "applyforWhite": "申請白標合作>"
 }
