style(i18n): modify iBBroker, regionalRepresentative, whiteLabelCooperation

--- a/src/i18n/locales/ar/iBBroker.json
+++ b/src/i18n/locales/ar/iBBroker.json
@@ -1,7 +1,7 @@
 {
   "introducingBroker": "الوسيط المُعرّف (IB)",
   "wCGsIBPlanIsPeopleOriented": "إن خطة الوسيط المُعرّف (IB) الخاصة بـ WCG تتمحور حول الأشخاص. سواء كنت فردًا أو شركة بها العشرات أو حتى المئات من الموظفين، فإننا نتفهم احتياجات عملك للنمو. إن خطة الوسيط المُعرّف (IB) الخاصة بنا تقدم مجموعة متنوعة من خيارات الخصم، ومكتب مرن مخصص للوكيل، وفريق إدارة محترف، ونحن على استعداد لتزويدك أنت وعملائك بخدمات عالية المستوى ودقيقة في أي وقت...",
-  "iBApplication": "تطبيق للوسيط المُعرّف (IB)   &gt;",
+  "iBApplication": "تطبيق للوسيط المُعرّف (IB)",
   "exclusiveIBPlan": "خطة حصرية للوسيط المُعرّف (IB)",
   "whetherYouAreATrading": "يمكننا تزويدك بالحلول ، سواء كنت مُدرب للتداول أو مزود إشارات أو مبيعات أو مسوقاً أو شخصاً يمكنه تقديم قيمة مضافة أخرى للمتداولين..",
   "introducingBrokers": "الوسطاء المُعرّفون ",
@@ -31,5 +31,5 @@
   "yourTotalCommission": "إجمالي عمولتك",
   "earnCommissionsInstantly": "إكسب العمولات على الفور",
   "becomingAnAgentBroker": "أن تصبح وكيلاً / وسيطاً سوف تكون أسهل طريقة لزيادة دخلك حيث أنه لا توجد تكلفة للتسجيل. يمكنك العمل من أي مكان وحتى الترويج لخدماتك من خلال الموقع الإلكتروني. في الوقت نفسه، يمكنك إحالة العملاء مباشرةً إلى WCG، وإرشادهم خلال عملية فتح الحساب الحقيقي، وشرح جميع فوائد أن تصبح عميلا لـدى WCG.",
-  "iWantToBeAnAgent": "اريد ان اكون وكيلا   >"
+  "iWantToBeAnAgent": "اريد ان اكون وكيلا"
 }
