--- a/src/i18n/locales/ar/regionalRepresentative.json
+++ b/src/i18n/locales/ar/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "الممثل الإقليمي",
   "thisIsAUnique": "هذه فرصة فريدة للأشخاص الذين يرغبون في تطوير أعمالهم محلياً. إن فتح مكتب إقليمي لـ WCG سيكون خيار تعاون على مستوى أعلى. قم بإدارة شركة الوكالة الخاصة بك في منطقتك للحصول على دخل ثابت، وفي نفس الوقت نحن نوفر لك أفضل شروط التداول والتكنولوجيا في السوق بمزايانا التنافسية.",
-  "representativeApplcation": "تطبيق ممثل إقليمي   >",
+  "representativeApplcation": "تطبيق ممثل إقليمي",
   "doNotMiss": "لا تفوت هذه الفرصة!",
   "setYourOwn": "قم بتعيين نموذج عملك الخاص بحرية، وكذلك خطتك التسويقية، وتنظيم الندوات، والندوات عبر الإنترنت، والأنشطة المفيدة أو المتعلقة باحتياجات محددة للسوق. سوف نساعدك على إنشاء أساس ثابت ومتين في سوقك المحلي.",
   "brandsThatSahre": "علامات تجارية ذات سمعة عالمية ",
@@ -23,5 +23,5 @@
   "technicalSupport": "احصل على الدعم",
   "becomeOurRegional": "كن ممثلنا الإقليمي",
   "wCGIsCurrently": "إن WCG تخضع حاليًا لتطور سريع، مما يعني أننا سوف نواصل البحث عن أسواق جديدة وتطويرها، وأصبح عملاؤنا جزءًا من نموذج أعمالنا لينمو معنا.",
-  "applyNow": "قدم الآن   >"
+  "applyNow": "قدم الآن"
 }
