--- a/src/i18n/locales/ar/whiteLabelCooperation.json
+++ b/src/i18n/locales/ar/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "برنامج شراكة البطاقة البيضاء",
   "wCGsWhite": "يتيح لك برنامج شراكة البطاقة البيضاء الخاص بـ WCG إنشاء علامة تجارية شخصية (أو شركة) في سوق الفوركس. هذا هو الحل الذي يمكنك من استخدام هويتك وموقعك الإلكتروني لإدارة أعمال الوساطة. يمكننا أن نوفر لك منتجات عالية الجودة ومنصات تداول تعمل بكامل طاقتها وتكنولوجيا متطورة وظروف تنافسية لتلبية جميع احتياجات عملائك.",
-  "applyFor": "تقدم بطلب للشراكة    >",
+  "applyFor": "تقدم بطلب للشراكة",
   "wCGWhite": "إستراتيجية البطاقة البيضاء WCG ",
   "asALeading": "بصفتنا وسيطًا رائدًا، نحن على استعداد لتزويدك بكل ما تحتاجه لبدء عمل تجاري جديد، بدءًا من إنشاء موقع ويب (إذا لزم الأمر) إلى أنشطة الدعم المكثفة للمكتب الخلفي والإدارة. نحن نقدم مجموعة كاملة من المنتجات والخدمات لاستخدامك بالمجان. لمزيد من الدعم لعملك، نحن نقدم تدريبًا متخصصاً ودعم للعملاء وتوجيهات من الدرجة الأولى. إن منصة التداول الخاصة بنا قابلة للتخصيص بالكامل ويمكن تسميتها باسم شركتك وعلامتك التجارية. يمكنك الاختيار من بين نماذج الدخل والمكافآت المختلفة من أجل زيادة الفوائد الخاصة بك.",
   "advancedEquipment": "معدات متطورة وعروض جذابة",
@@ -26,5 +26,5 @@
   "customerSupport": "دعم العملاء",
   "provideDevelopment": "لتحقيق غرض تكامل العلامة التجارية",
   "achieveBrandIntegration": "تقديم الدعم التنموي",
-  "applyforWhite": "التقدم بطلب للحصول على شراكة البطاقة البيضاء   >"
+  "applyforWhite": "التقدم بطلب للحصول على شراكة البطاقة البيضاء"
 }
