--- a/src/i18n/locales/cn/iBBroker.json
+++ b/src/i18n/locales/cn/iBBroker.json
@@ -1,7 +1,7 @@
 {
   "introducingBroker": "代理商（IB）",
   "wCGsIBPlanIsPeopleOriented": "WCG的代理商计划以人为本，不论您是个人或拥有数十甚至数百名员工的公司，我们都了解到您的业务成长所需。我们的代理商计划供多种返佣选项、灵活弹性的代理后台、专业的经理团队，随时准备为您和您的客户提供贴心细致的服务。",
-  "iBApplication": "申请代理>",
+  "iBApplication": "申请代理",
   "exclusiveIBPlan": "专属代理企划",
   "whetherYouAreATrading": "无论您是交易教育工作者、信号提供者、市场营销人员，还是能提供其他附加价值给交易者的人员，我们都能为您提供解决方案。",
   "introducingBrokers": "介绍代理人",
@@ -31,5 +31,5 @@
   "yourTotalCommission": "您的佣金总数",
   "earnCommissionsInstantly": "立即轻松赚取佣金",
   "becomingAnAgentBroker": "成为代理经纪人将是增加收入的最简单方法，因为无需注册成本。您可以在任何地方工作，甚至通过网站推广您的服务。同时可以直接将交易者",
-  "iWantToBeAnAgent": "我想成为代理人>"
+  "iWantToBeAnAgent": "我想成为代理人"
 }
