--- a/src/i18n/locales/cn/regionalRepresentative.json
+++ b/src/i18n/locales/cn/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "区域代表",
   "thisIsAUnique": "对于想要在本地发展交易服务的人们来说，这是一个独一无二的机会。开设WCG区域办事处将是一个更高层次的合作选择，在您的地区管理自己的代理公司来获得稳定收益，同时以我们强大的优势为您提供行业内最好的交易条件及技术。",
-  "representativeApplcation": "申请代表>",
+  "representativeApplcation": "申请代表",
   "doNotMiss": "您的绝佳机会",
   "setYourOwn": "自由设定属于您自己的商业模式、营销蓝图、组织研讨会、网络研讨会以及对特定市场需求有益或相关的活动。我们将帮助您在您的当地市场获得稳定扎实的基础。",
   "brandsThatSahre": "共享全球信誉的品牌",
@@ -23,5 +23,5 @@
   "technicalSupport": "技术的支持",
   "becomeOurRegional": "成为我们的区域代表",
   "wCGIsCurrently": "WCG目前正在快速发展中，这意味着我们将不断寻求并且开发新的市场，而我们的客户正在成为我们商业模式其中一部分来与我们共同成长。",
-  "applyNow": "立即申请>"
+  "applyNow": "立即申请"
 }
