--- a/src/i18n/locales/cn/whiteLabelCooperation.json
+++ b/src/i18n/locales/cn/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "白标合作",
   "wCGsWhite": "WCG的白标合作计划可以让您在外汇行业创立个人（或公司）的品牌。这是一个允许您使用自己的身份和网站来运行经纪商业务的解决方案。我们能为您提供优质的产品、功能齐全的交易平台、尖端科技与有竞争力条件来满足您客户的一切需求。",
-  "applyFor": "申请合作>",
+  "applyFor": "申请合作",
   "wCGWhite": "WCG白标战略",
   "asALeading": "作为领先的经纪商，我们已经准备好为您提供启动新业务的一切所需，从创建网站（如果需要）到广泛的后台支持以及管理活动。我们提供全套的智汇产品与服务供您随意使用。为了进一步支持您的业务，我们提供专门的培训、客户支持和一流的指导。我们的交易平台是可以完全定制的，可以用您的公司名称和商标来命名。您可以在各种收益和报酬模式之间做出选择，来使您的利益得到最大化。",
   "advancedEquipment": "先进设备与最佳条件",
@@ -26,5 +26,5 @@
   "customerSupport": "客户支持",
   "provideDevelopment": "提供开发支持",
   "achieveBrandIntegration": "实现品牌整合",
-  "applyforWhite": "申请白标合作>"
+  "applyforWhite": "申请白标合作"
 }
