--- a/src/i18n/locales/id/whiteLabelCooperation.json
+++ b/src/i18n/locales/id/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "Kerjasama White Label",
   "wCGsWhite": "Program kerjasama white label WCG memungkinkan Anda membuat merek pribadi (atau perusahaan) di industri valuta asing. Ini adalah solusi yang memungkinkan Anda menggunakan identitas dan situs web Anda sendiri untuk menjalankan bisnis broker. Kami dapat memberi Anda produk berkualitas tinggi, platform perdagangan yang berfungsi penuh, teknologi mutakhir, dan kondisi kompetitif untuk memenuhi semua kebutuhan pelanggan Anda.",
-  "applyFor": "Ajukan kerja sama   >",
+  "applyFor": "Ajukan kerja sama",
   "wCGWhite": "Strategi white label WCG",
   "asALeading": "Sebagai broker terkemuka, kami siap menyediakan semua yang Anda butuhkan untuk memulai bisnis baru, mulai dari pembuatan situs web (jika diperlukan) hingga dukungan back-office dan aktivitas manajemen yang ekstensif. Kami menyediakan rangkaian lengkap produk dan layanan untuk Anda gunakan secara gratis. Untuk lebih mendukung bisnis Anda, kami menyediakan pelatihan khusus, dukungan pelanggan, dan panduan kelas satu. Platform perdagangan kami sepenuhnya dapat disesuaikan dan dapat diberi nama sesuai nama perusahaan dan merek dagang Anda. Anda dapat memilih di antara berbagai model pendapatan dan remunerasi untuk memaksimalkan keuntungan Anda.",
   "advancedEquipment": "Peralatan canggih dan penawaran menarik",
@@ -26,5 +26,5 @@
   "customerSupport": "Dukungan pelanggan ",
   "provideDevelopment": "Memberikan dukungan pengembangan untuk",
   "achieveBrandIntegration": "mencapai tujuan integrasi merek",
-  "applyforWhite": "Ajukan lamaran kerja sama white label   >"
+  "applyforWhite": "Ajukan lamaran kerja sama white label"
 }
