--- a/src/i18n/locales/ms/iBBroker.json
+++ b/src/i18n/locales/ms/iBBroker.json
@@ -1,7 +1,7 @@
 {
   "introducingBroker": "Introducing Broker (IB)",
   "wCGsIBPlanIsPeopleOriented": "Pelan IB WCG berorientasikan orang. Sama ada anda seorang individu atau syarikat dengan berpuluh-puluh atau bahkan ratusan pekerja, kami memahami apa yang perniagaan anda perlukan untuk berkembang. Pelan IB kami menawarkan pelbagai pilihan rebat, agent back office yang fleksibel dan pasukan pengurusan profesional, yang bersedia memberi anda dan pelanggan anda perkhidmatan yang teliti pada setiap saat.",
-  "iBApplication": "Permohonan IB   >",
+  "iBApplication": "Permohonan IB",
   "exclusiveIBPlan": "Pelan IB eksklusif",
   "whetherYouAreATrading": "Sama ada anda seorang pendidik perdagangan, penyedia isyarat, penjualan, pemasaran atau seseorang yang dapat memberikan nilai tambah lain kepada pedagang, kami dapat memberikan anda penyelesaian.",
   "introducingBrokers": "Introducing Brokers",
@@ -31,5 +31,5 @@
   "yourTotalCommission": "Jumlah komisen anda",
   "earnCommissionsInstantly": "Dapatkan komisen dengan serta-merta",
   "becomingAnAgentBroker": "Menjadi ejen / broker akan menjadi kaedah termudah untuk menambah pendapatan anda kerana tidak ada kos pendaftaran. Anda boleh bekerja di mana sahaja dan bahkan mempromosikan perkhidmatan anda melalui laman web. Pada masa yang sama, anda boleh merujuk klien secara langsung ke WCG, membimbing mereka melalui proses pembukaan akaun sebenar, dan menerangkan semua faedah menjadi pelanggan WCG",
-  "iWantToBeAnAgent": "Saya mahu menjadi ejen   >"
+  "iWantToBeAnAgent": "Saya mahu menjadi ejen"
 }
