--- a/src/i18n/locales/ms/regionalRepresentative.json
+++ b/src/i18n/locales/ms/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "Wakil daerah",
   "thisIsAUnique": "Ini adalah peluang unik bagi orang yang ingin mengembangkan perniagaan mereka di dalam negara. Membuka pejabat wilayah WCG akan menjadi pilihan kerjasama peringkat lebih tinggi. Uruskan syarikat agensi anda sendiri di kawasan anda untuk memperoleh pendapatan yang stabil dan pada masa yang sama memberi anda syarat dan teknologi perdagangan terbaik dalam industri dengan kelebihan daya saing kami.",
-  "representativeApplcation": "Permohonan wakil   >",
+  "representativeApplcation": "Permohonan wakil",
   "doNotMiss": "Jangan lepaskan peluang ini!",
   "setYourOwn": "Tetapkan model perniagaan anda sendiri dengan bebas, rancangan pemasaran anda, atur seminar, webinar dan aktiviti yang bermanfaat atau berkaitan dengan keperluan pasaran tertentu. Kami akan membantu anda memperoleh asas yang stabil dan kukuh di pasaran tempatan anda.",
   "brandsThatSahre": "Jenama yang mempunyai reputasi global",
@@ -23,5 +23,5 @@
   "technicalSupport": "sokongan teknikal",
   "becomeOurRegional": "Menjadi wakil wilayah kami",
   "wCGIsCurrently": "WCG kini sedang mengalami pengembangan yang pesat, ia bermaksud bahawa kami akan terus mencari dan mengembangkan pasaran terbaru dan pelanggan kami akan menjadi sebahagian daripada model perniagaan kami untuk berkembang bersama kami.",
-  "applyNow": "Mohon sekarang   >"
+  "applyNow": "Mohon sekarang"
 }
