--- a/src/i18n/locales/ms/whiteLabelCooperation.json
+++ b/src/i18n/locales/ms/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "White label cooperation",
   "wCGsWhite": "Program white label cooperation WCG membolehkan anda membuat jenama peribadi (atau syarikat) dalam industri pertukaran wang asing. Ini adalah penyelesaian yang membolehkan anda menggunakan identiti dan laman web anda sendiri untuk menjalankan perniagaan broker. Kami boleh memberi anda produk yang berkualiti tinggi, platform perdagangan yang berfungsi sepenuhnya, teknologi canggih dan keadaan kompetitif untuk memenuhi semua keperluan pelanggan anda.",
-  "applyFor": "Memohon untuk bekerjasama   >",
+  "applyFor": "Memohon untuk bekerjasama",
   "wCGWhite": "Strategi WCG White Label",
   "asALeading": "Sebagai broker terkemuka, kami bersedia untuk menyediakan semua yang anda perlukan untuk memulakan perniagaan baru, dari penciptaan laman web (jika diperlukan) hingga aktiviti sokongan dan pengurusan back-office yang luas. Kami menyediakan satu set lengkap produk dan perkhidmatan untuk penggunaan percuma anda. Untuk lebih menyokong perniagaan anda, kami menyediakan latihan khusus, sokongan pelanggan dan bimbingan kelas pertama. Platform perdagangan kami dapat disesuaikan sepenuhnya dan boleh dinamakan sempena nama syarikat dan tanda dagangan anda. Anda boleh memilih antara pelbagai model pendapatan dan imbuhan untuk memaksimumkan faedah anda.",
   "advancedEquipment": "Peralatan canggih dan tawaran menarik",
@@ -26,5 +26,5 @@
   "customerSupport": "Sokongan pengguna",
   "provideDevelopment": "Berikan sokongan pembangunan untuk",
   "achieveBrandIntegration": "mencapai tujuan penyatuan jenama",
-  "applyforWhite": "Memohon white label cooperation   >"
+  "applyforWhite": "Memohon white label cooperation"
 }
