--- a/src/i18n/locales/vi/iBBroker.json
+++ b/src/i18n/locales/vi/iBBroker.json
@@ -1,7 +1,7 @@
 {
   "introducingBroker": "Giới thiệu đại lý (IB)",
   "wCGsIBPlanIsPeopleOriented": "Kế hoạch IB của WCG là hướng đến con người. Cho dù bạn là một cá nhân hay một công ty với hàng chục hoặc thậm chí hàng trăm nhân viên, chúng tôi hiểu doanh nghiệp của bạn cần gì để phát triển. Gói IB của chúng tôi cung cấp nhiều tùy chọn giảm giá khác nhau, văn phòng đại lý linh hoạt, và đội ngũ quản lý chuyên nghiệp, sẵn sàng cung cấp cho bạn và khách hàng của bạn những dịch vụ chu đáo và tỉ mỉ bất cứ lúc nào.",
-  "iBApplication": "Introducing Broker (IB)   >",
+  "iBApplication": "Introducing Broker (IB)",
   "exclusiveIBPlan": "Gói IB độc quyền",
   "whetherYouAreATrading": "Cho dù bạn là người dạy giao dịch, nhà cung cấp tín hiệu, người bán hàng, nhà tiếp thị hay người có thể cung cấp giá trị gia tăng khác cho người giao dịch, chúng tôi đều có thể cung cấp cho bạn các giải pháp.",
   "introducingBrokers": "Giới thiệu các nhà môi giới",
@@ -31,5 +31,5 @@
   "yourTotalCommission": "Tổng hoa hồng của bạn",
   "earnCommissionsInstantly": "Kiếm tiền hoa hồng ngay lập tức",
   "becomingAnAgentBroker": "Trở thành đại lý / nhà môi giới sẽ là cách dễ nhất để tăng thu nhập của bạn vì không có chi phí đăng ký. Bạn có thể làm việc ở bất cứ đâu và thậm chí quảng bá dịch vụ của mình thông qua trang web. Đồng thời, bạn có thể trực tiếp giới thiệu khách hàng đến WCG, hướng dẫn họ quy trình mở tài khoản thực và giải thích tất cả những lợi ích khi trở thành khách hàng của WCG.",
-  "iWantToBeAnAgent": "Tôi muốn trở thành một đại lý   >"
+  "iWantToBeAnAgent": "Tôi muốn trở thành một đại lý"
 }
