--- a/src/i18n/locales/vi/regionalRepresentative.json
+++ b/src/i18n/locales/vi/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "Đại diện khu vực",
   "thisIsAUnique": "Đây là một cơ hội duy nhất cho những người muốn phát triển doanh nghiệp tại địa phương. Mở văn phòng khu vực WCG sẽ là một lựa chọn hợp tác cấp cao hơn. Quản lý công ty đại lý của riêng bạn tại địa phương để có thu nhập ổn định, đồng thời cung cấp cho bạn các điều kiện giao dịch và công nghệ tốt nhất trong ngành với lợi thế cạnh tranh của chúng tôi.",
-  "representativeApplcation": "Ứng dụng đại diện   >",
+  "representativeApplcation": "Ứng dụng đại diện",
   "doNotMiss": "Đừng bỏ lỡ cơ hội này!",
   "setYourOwn": "Tự do thiết lập mô hình kinh doanh của riêng bạn, kế hoạch tiếp thị của bạn, tổ chức hội thảo, hội thảo trên web và các hoạt động có lợi hoặc liên quan đến nhu cầu thị trường cụ thể. Chúng tôi sẽ hỗ trợ bạn có được nền tảng ổn định và vững chắc tại thị trường địa phương của bạn.",
   "brandsThatSahre": "Các thương hiệu có danh tiếng toàn cầu",
@@ -23,5 +23,5 @@
   "technicalSupport": "hỗ trợ kỹ thuật",
   "becomeOurRegional": "Trở thành đại diện khu vực của chúng tôi",
   "wCGIsCurrently": "WCG hiện đang trong quá trình phát triển nhanh chóng, có nghĩa là chúng tôi sẽ tiếp tục tìm kiếm và phát triển các thị trường mới, và khách hàng của chúng tôi đang trở thành một phần trong mô hình kinh doanh để cùng chúng tôi phát triển.",
-  "applyNow": "Đăng ký ngay   >"
+  "applyNow": "Đăng ký ngay"
 }
