--- a/src/i18n/locales/vi/whiteLabelCooperation.json
+++ b/src/i18n/locales/vi/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "Hợp tác nhãn trắng",
   "wCGsWhite": "Chương trình hợp tác nhãn trắng của WCG cho phép bạn tạo thương hiệu cá nhân (hoặc công ty) trong ngành ngoại hối. Đây là một giải pháp cho phép bạn sử dụng danh tính và trang web của riêng mình để điều hành công việc môi giới. Chúng tôi có thể cung cấp cho bạn các sản phẩm chất lượng cao,nền tảng giao dịch đầy đủ chức năng, công nghệ tiên tiến và các điều kiện cạnh tranh để đáp ứng mọi nhu cầu của khách hàng.",
-  "applyFor": "Đăng ký hợp tác   >",
+  "applyFor": "Đăng ký hợp tác",
   "wCGWhite": "Chiến lược Nhãn trắng WCG",
   "asALeading": "Với tư cách là nhà môi giới hàng đầu, chúng tôi sẵn sàng cung cấp cho bạn mọi thứ bạn cần để bắt đầu một công việc kinh doanh mới, từ việc tạo trang web (nếu cần) đến các hoạt động hỗ trợ và quản lý tại văn phòng rộng rãi. Chúng tôi cung cấp đầy đủ các sản phẩm và dịch vụ để bạn sử dụng miễn phí. Để hỗ trợ thêm cho doanh nghiệp của bạn, chúng tôi cung cấp đào tạo chuyên biệt, hỗ trợ khách hàng và hướng dẫn hạng nhất. Nền tảng giao dịch của chúng tôi hoàn toàn có thể tùy chỉnh và có thể được đặt theo tên công ty và nhãn hiệu của bạn. Bạn có thể chọn giữa các mô hình thu nhập và thù lao khác nhau để tối đa hóa lợi ích của bạn.",
   "advancedEquipment": "Thiết bị tiên tiến và ưu đãi hấp dẫn",
@@ -26,5 +26,5 @@
   "customerSupport": "Hỗ trợ khách hàng",
   "provideDevelopment": "Cung cấp hỗ trợ phát triển",
   "achieveBrandIntegration": "để đạt được mục đích tích hợp thương hiệu",
-  "applyforWhite": "Đăng ký hợp tác nhãn trắng   >"
+  "applyforWhite": "Đăng ký hợp tác nhãn trắng"
 }
