--- a/src/i18n/locales/zh/regionalRepresentative.json
+++ b/src/i18n/locales/zh/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "區域代表",
   "thisIsAUnique": "對於想要在本地發展交易服務的人們來說，這是一個獨一無二的機會。開設WCG區域辦事處將是一個更高層次的合作選擇，在您的地區管理自己的代理公司來獲得穩定收益，同時以我們強大的優勢為您提供行業內最好的交易條件及技術。",
-  "representativeApplcation": "申請代表>",
+  "representativeApplcation": "申請代表",
   "doNotMiss": "您的絕佳機會",
   "setYourOwn": "自由設定屬於您自己的商業模式、營銷藍圖、組織研討會、網路研討會以及對特定市場需求有益或相關的活動。我們將幫助您在您的當地市場獲得穩定扎實的基礎。",
   "brandsThatSahre": "共享全球信譽的品牌",
@@ -23,5 +23,5 @@
   "technicalSupport": "技術的支援",
   "becomeOurRegional": "成為我們的區域代表",
   "wCGIsCurrently": "WCG目前正在快速發展中，這意味着我們將不斷尋求並且開發新的市場，而我們的客戶正在成為我們商業模式其中一部分來與我們共同成長。",
-  "applyNow": "立即申請>"
+  "applyNow": "立即申請"
 }
