--- a/src/i18n/locales/zh/whiteLabelCooperation.json
+++ b/src/i18n/locales/zh/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "白標合作",
   "wCGsWhite": "WCG的白標合作計劃可以讓您在外匯行業創立個人（或公司）的品牌。這是一個允許您使用自己的身份和網站來運行經紀商業務的解決方案。我們能為您提供優質的產品、功能齊全的交易平台、尖端科技與有競爭力條件來滿足您客戶的一切需求。",
-  "applyFor": "申請合作>",
+  "applyFor": "申請合作",
   "wCGWhite": "WCG白標戰略",
   "asALeading": "作為領先的經紀商，我們已經準備好為您提供啟動新業務的一切所需，從創建網站（如果需要）到廣泛的後台支持以及管理活動。我們提供全套的智匯產品與服務供您隨意使用。為了進一步支持您的業務，我們提供專門的培訓、客戶支持和一流的指導。我們的交易平台是可以完全定制的，可以用您的公司名稱和商標來命名。您可以在各種收益和報酬模式之間做出選擇，來使您的利益得到最大化。",
   "advancedEquipment": "先進設備與最佳條件",
@@ -26,5 +26,5 @@
   "customerSupport": "客戶支援",
   "provideDevelopment": "提供開發支援",
   "achieveBrandIntegration": "實現品牌整合",
-  "applyforWhite": "申請白標合作>"
+  "applyforWhite": "申請白標合作"
 }
