--- a/src/i18n/locales/en/regionalRepresentative.json
+++ b/src/i18n/locales/en/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "Regional representative",
   "thisIsAUnique": "This is a unique opportunity for people who want to develop their businesses locally. Opening a WCG regional office will be a higher-level cooperation option. Manage your own agency company in your area to obtain stable income， and at the same time provide you with the best trading conditions and technology in the industry with our competitive advantages.",
-  "representativeApplcation": "Representative applcation   >",
+  "representativeApplcation": "Representative applcation",
   "doNotMiss": "Do not miss this opportunity!",
   "setYourOwn": "Set your own business model freely,your marketing plan,organize seminars,webinars,and activities that are beneficial or related to specific market needs.We will assist you to gain a stable and solid foundation in your local market.",
   "brandsThatSahre": "Brands that share a global reputation",
@@ -23,5 +23,5 @@
   "technicalSupport": "technical support",
   "becomeOurRegional": "Become our regional representative",
   "wCGIsCurrently": "WCG is currently undergoing rapid development,which means that we will continue to seek and develop new markets,and our customers are becoming part of our business model to grow with us.",
-  "applyNow": "Apply now   >"
+  "applyNow": "Apply now"
 }
