--- a/src/i18n/locales/id/regionalRepresentative.json
+++ b/src/i18n/locales/id/regionalRepresentative.json
@@ -1,7 +1,7 @@
 {
   "regionalRepresentative": "Perwakilan daerah",
   "thisIsAUnique": "Ini adalah kesempatan unik bagi orang yang ingin mengembangkan bisnisnya secara lokal.Membuka kantor regional WCG akan menjadi opsi kerjasama tingkat yang lebih tinggi.Kelola perusahaan agensi Anda sendiri di wilayah Anda untuk memperoleh pendapatan yang stabil,dan pada saat yang sama memberi Anda kondisi dan teknologi perdagangan terbaik di industri dengan keunggulan kompetitif kami.",
-  "representativeApplcation": "Aplikasi perwakilan   >",
+  "representativeApplcation": "Aplikasi perwakilan",
   "doNotMiss": "Jangan lewatkan kesempatan ini!",
   "setYourOwn": "Tetapkan model bisnis Anda sendiri dengan bebas, rencana pemasaran Anda, atur seminar, webinar, dan aktivitas yang bermanfaat atau terkait dengan kebutuhan pasar tertentu. Kami akan membantu Anda mendapatkan dasar yang stabil dan kokoh di pasar lokal Anda.",
   "brandsThatSahre": "Merek yang memiliki reputasi global ",
@@ -9,7 +9,7 @@
   "soleRegional": "Perwakilan regional tunggal",
   "youWillBe": "Anda akan menjadi satu-satunya perwakilan di wilayah Anda. Melalui program perwakilan regional WCG, Anda akan menikmati hak keagenan eksklusif di area spesifik ini.",
   "marketingAssistance": "Dukungan bantuan pemasaran",
-  "provideComprehensive": "Memberikan dukungan teknis yang komprehensif untuk membantu mengoptimalkan promosi jaringan,materi pemasaran,dan membantu mencatat dan mengelola pelanggan Anda..",
+  "provideComprehensive": "Memberikan dukungan teknis yang komprehensif untuk membantu mengoptimalkan promosi jaringan,materi pemasaran,dan membantu mencatat dan mengelola pelanggan Anda.",
   "competitiveEdge": "Keunggulan kompetitif",
   "weWillProvide": "Kami akan memberi pelanggan Anda kondisi perdagangan yang kompetitif dan dengan cepat meningkatkan keuntungan perdagangan Anda di wilayah Anda.",
   "regionalRepresentativeIsIncome": "Pendapatan perwakilan daerah",
@@ -23,5 +23,5 @@
   "technicalSupport": "dukungan teknis",
   "becomeOurRegional": "Menjadi perwakilan regional kami",
   "wCGIsCurrently": "WCG saat ini sedang mengalami perkembangan pesat, yang berarti kami akan terus mencari dan mengembangkan pasar baru, dan pelanggan kami menjadi bagian dari model bisnis kami untuk tumbuh bersama kami.",
-  "applyNow": "Ajukan sekarang   >"
+  "applyNow": "Ajukan sekarang"
 }
