--- a/src/i18n/locales/zh/iBBroker.json
+++ b/src/i18n/locales/zh/iBBroker.json
@@ -1,7 +1,7 @@
 {
   "introducingBroker": "代理商（IB）",
   "wCGsIBPlanIsPeopleOriented": "WCG的代理商計劃以人為本，不論您是個人或擁有數十甚至數百名員工的公司，我們都瞭解到您的業務成長所需。我們的代理商計劃供多種返傭選項、靈活彈性的代理後台、專業的經理團隊，隨時準備為您和您的客戶提供貼心細緻的服務。",
-  "iBApplication": "申請代理>",
+  "iBApplication": "申請代理",
   "exclusiveIBPlan": "專屬代理企劃",
   "whetherYouAreATrading": "無論您是交易教育工作者、信號提供者、市場行銷人員，還是能提供其他附加價值給交易者的人員，我們都能為您提供解決方案。",
   "introducingBrokers": "介紹代理人",
@@ -31,5 +31,5 @@
   "yourTotalCommission": "您的傭金總數",
   "earnCommissionsInstantly": "立即輕鬆賺取傭金",
   "becomingAnAgentBroker": "成為代理經紀人將是增加收入的最簡單方法，因為無需註冊成本。您可以在任何地方工作，甚至通過網站推廣您的服務。同時可以直接將交易者",
-  "iWantToBeAnAgent": "我想成為代理人>"
+  "iWantToBeAnAgent": "我想成為代理人"
 }
