--- a/src/i18n/locales/en/fundManager.json
+++ b/src/i18n/locales/en/fundManager.json
@@ -29,8 +29,11 @@
   "toViewTheir": "To view their account statistics",
   "haveEverythingYouNeed": "Have everything you need",
   "togetherWithWCG": "Together with WCG to establish a broad customer group, no matter the size of your business, you can use our excellent trading environment with abundant functionality to handle all your needs.",
-  "excellentTradingEnvironment": "Excellent trading environment to increase your income",
-  "aMultiAccountTradingPlatform": "A multi-account trading platform that can satisfy your needs",
-  "theBrokerYouNeed": "The broker you need with strong background for cooperation and support",
+  "excellentTradingEnvironment": "Excellent trading environment",
+  "toIncreaseYour": "to increase your income",
+  "aMultiAccountTradingPlatform": "A multi-account trading platform",
+  "thatCanSatisfy": " that can satisfy your needs",
+  "theBrokerYouNeed": "The broker you need with strong",
+  "backgroundForCooperation": "background for cooperation and support",
   "iWantToBeAManager": "I want to be a manager"
 }
