--- a/src/i18n/locales/en/whiteLabelCooperation.json
+++ b/src/i18n/locales/en/whiteLabelCooperation.json
@@ -1,7 +1,7 @@
 {
   "whiteLabel": "White label cooperation",
   "wCGsWhite": "WCG's white label cooperation program allows you to create a personal (or company) brand in the foreign exchange industry. This is a solution that allows you to use your own identity and website to run the brokerage business. We can provide you with high-quality products， fully functional trading platforms, cutting-edge technology and competitive conditions to meet all your customers' needs.",
-  "applyFor": "Apply for cooperation   >",
+  "applyFor": "Apply for cooperation",
   "wCGWhite": "WCG White Label Strategy",
   "asALeading": "As a leading broker, we are ready to provide you with everything you need to start a new business, from the creation of a website (if needed) to extensive back-office support and management activities. We provide a full set of products and services for your free use. To further support your business, we provide specialized training, customer support and first-class guidance. Our trading platform is fully customizable and can be named after your company name and trademark. You can choose between various income and remuneration models to maximize your benefits.",
   "advancedEquipment": "Advanced equipment and attractive offers",
