--- a/src/i18n/locales/vi/fundManager.json
+++ b/src/i18n/locales/vi/fundManager.json
@@ -30,7 +30,10 @@
   "haveEverythingYouNeed": "Có mọi thứ bạn cần",
   "togetherWithWCG": "Cùng với WCG để thiết lập một nhóm khách hàng rộng lớn, bất kể quy mô doanh nghiệp của bạn như thế nào, bạn có thể sử dụng môi trường giao dịch tuyệt vời của chúng tôi với nhiều chức năng phong phú để đáp ứng mọi nhu cầu của bạn.",
   "excellentTradingEnvironment": "Môi trường giao dịch tuyệt vời để tăng thu nhập của bạn",
+  "toIncreaseYour": "Tăng thu nhập",
   "aMultiAccountTradingPlatform": "Một nền tảng giao dịch đa tài khoản có thể đáp ứng nhu cầu của bạn",
-  "theBrokerYouNeed": "Người môi giới bạn cần với nền tảng cho sự hợp tác và hỗ trợ",
+  "thatCanSatisfy": "Nền tảng đa tài khoản",
+  "theBrokerYouNeed": "Đại lý bạn cần có nền tảng vững chắc để hợp tác và hỗ trợ",
+  "backgroundForCooperation": "Hợp tác và hỗ trợ",
   "iWantToBeAManager": "Tôi muốn trở thành một người quản lý"
 }
