--- a/src/i18n/locales/zh/fundManager.json
+++ b/src/i18n/locales/zh/fundManager.json
@@ -29,8 +29,11 @@
   "toViewTheir": "查看其帳戶統計信息",
   "haveEverythingYouNeed": "擁有您一切所需",
   "togetherWithWCG": "與WCG一起建立一個廣泛的客戶群體，無論您的業務規模大小，都可以利用我們具有充裕功能性的出色交易環境，來處理您所有的需求。",
-  "excellentTradingEnvironment": "優秀的交易環境為您增加多收入",
-  "aMultiAccountTradingPlatform": "一個可以滿足您多帳戶交易平台",
-  "theBrokerYouNeed": "您需要的交易商大力合作與支持",
+  "excellentTradingEnvironment": "優秀的交易環境",
+  "toIncreaseYour": "為您增加多收入",
+  "aMultiAccountTradingPlatform": "一個可以滿足您",
+  "thatCanSatisfy": "多帳戶交易平台",
+  "theBrokerYouNeed": "您需要的交易商",
+  "backgroundForCooperation": "大力合作與支持",
   "iWantToBeAManager": "我想成為經理人"
 }
