--- a/src/i18n/locales/ms/fundManager.json
+++ b/src/i18n/locales/ms/fundManager.json
@@ -1,36 +1,39 @@
 {
-  "fundManager": "Fund manager",
-  "WCGProvidesAssetManagement": "WCG provides asset management solutions for fund managers, including the award-winning MT4 MAM (multi-account management) fund management tool to help our partners effectively manage client funds in a safe environment and grow side by side with us.",
-  "applyForManager": "Apply for manager",
-  "youCanTrade": "You can trade in the market through different position account systems. WCG provides the best analysis and trading tools (manual and algorithm). In addition, we will continue to provide automatic software updates to achieve fast and safe operation on any device.",
-  "makeFullUseOfAlgorithms": "Make full use of algorithms and trading opportunities to create, test and improve your strategies. Specify how to calculate parameters, set deadlines, maximize capital, value, and other investor requirements. Manage accounts and generate detailed reports to monitor customer transaction results in a unified way. Display any data on the graph, automatically calculate, manage operating balances, expenditures and handling fees.",
-  "WCGCanHelpYourFund": "WCG can help your fund to increase its income: your traders will be able to fully realize their potential and bring maximum profits to the fund, and its positive results will attract new investors to join.",
-  "scientificAndFlexibleManagement": "Scientific and flexible management",
-  "overTheYears": "Over the years, we have established a successful relationship with fund managers because we understand your needs",
-  "multiPersonAccountManagement": "Multi-person account management",
-  "usingTheWCGMAMManagementSystem": "Using the WCG MAM management system, money managers can quickly manage multiple accounts",
-  "efficientAccountControl": "Efficient account control",
-  "allowTradersToAdd": "Allow traders to add, delete or suspend the client at any time",
-  "optionalAllocationTypes": "Optional allocation types",
-  "multipleTransactionAllocationTypes": "Multiple transaction allocation types, depending on your trading style and size and types of client funds",
-  "multipleProductCategories": "Multiple product categories",
-  "multipleCurrencyProducts": "Multiple currency products, arbitrage exchange rates, precious metals, commodities and index CFDs, etc",
-  "fundManagersCan": "Fund managers can",
-  "openMainAccount": "Open main account",
-  "collectTheTradingHistory": "Collect the trading history of their accounts",
-  "manageInvestorAccounts": "Manage investor accounts",
-  "setANickname": "Set a nickname, set risk limits",
-  "setFees": "Set fees",
-  "investorsCan": "Investors can",
-  "lookForAFund": "Look for a fund investment manager",
-  "toOpenAn": "To open an investment account",
-  "toMakeDeposits": "To make deposits",
-  "subscribeToThe": "Subscribe to the main account",
-  "toViewTheir": "To view their account statistics",
-  "haveEverythingYouNeed": "Have everything you need",
-  "togetherWithWCG": "Together with WCG to establish a broad customer group, no matter the size of your business, you can use our excellent trading environment with abundant functionality to handle all your needs.",
-  "excellentTradingEnvironment": "Excellent trading environment to increase your income",
-  "aMultiAccountTradingPlatform": "A multi-account trading platform that can satisfy your needs",
-  "theBrokerYouNeed": "The broker you need with strong background for cooperation and support",
-  "iWantToBeAManager": "I want to be a manager"
+  "fundManager": "Pengurus dana",
+  "WCGProvidesAssetManagement": "WCG menyediakan penyelesaian pengurusan aset untuk pengurus dana, termasuk alat pengurusan dana MT4 MAM (pengurusan pelbagai akaun) yang memenangi anugerah untuk membantu rakan kongsi kami menguruskan dana pelanggan dengan berkesan dalam persekitaran yang selamat dan berkembang berdampingan dengan kami.",
+  "applyForManager": "Memohon pengurus   >",
+  "youCanTrade": "Anda boleh berdagang di pasaran melalui sistem akaun posisi yang berbeza. WCG menyediakan alat analisa dan perdagangan terbaik (manual dan algoritma). Di samping itu, kami akan terus memberikan kemas kini perisian automatik untuk mencapai operasi yang cepat dan selamat di mana-mana peranti.",
+  "makeFullUseOfAlgorithms": "Manfaatkan sepenuhnya algoritma dan peluang perdagangan untuk membuat, menguji dan memperbaiki strategi anda. Nyatakan cara mengira parameter, menetapkan tarikh akhir, memaksimumkan modal, nilai dan keperluan pelabur lain. Menguruskan akaun dan menghasilkan laporan terperinci untuk memantau hasil transaksi pelanggan dengan cara yang bersatu. Paparkan data pada grafik, kirakan secara automatik, urus baki operasi, perbelanjaan dan biaya pengendalian.",
+  "WCGCanHelpYourFund": "WCG dapat membantu dana anda untuk meningkatkan pendapatannya: pedagang anda akan dapat merealisasikan sepenuhnya potensi mereka dan membawa keuntungan maksimum ke dana tersebut, dan hasil positifnya akan menarik pelabur baru untuk bergabung.",
+  "scientificAndFlexibleManagement": "Pengurusan saintifik dan fleksibel",
+  "overTheYears": "Selama bertahun-tahun, kami menjalin hubungan yang berjaya dengan pengurus dana kerana kami memahami keperluan anda",
+  "multiPersonAccountManagement": "Pengurusan akaun berbilang orang",
+  "usingTheWCGMAMManagementSystem": "Dengan menggunakan sistem pengurusan WCG MAM, pengurus wang dapat menguruskan banyak akaun dengan cepat",
+  "efficientAccountControl": "Kawalan akaun yang cekap",
+  "allowTradersToAdd": "Membenarkan pedagang untuk menambah, menghapus atau menggantung pelanggan pada bila-bila masa",
+  "optionalAllocationTypes": "Jenis peruntukan pilihan",
+  "multipleTransactionAllocationTypes": "Pelbagai jenis peruntukan transaksi, bergantung pada gaya dan saiz perdagangan anda dan jenis dana pelanggan",
+  "multipleProductCategories": "Pelbagai kategori produk",
+  "multipleCurrencyProducts": "Produk berbilang mata wang, kadar pertukaran arbitraj, logam berharga, komoditi dan CFD indeks, dll",
+  "fundManagersCan": "Pengurus dana boleh",
+  "openMainAccount": "Buka akaun utama",
+  "collectTheTradingHistory": "Kumpulkan sejarah perdagangan akaun mereka",
+  "manageInvestorAccounts": "Urus akaun pelabur",
+  "setANickname": "Tetapkan nama samaran， tetapkan had risiko",
+  "setFees": "Tetapkan yuran",
+  "investorsCan": "Pelabur boleh",
+  "lookForAFund": "Cari pengurus pelaburan dana",
+  "toOpenAn": "Untuk membuka akaun pelaburan",
+  "toMakeDeposits": "Untuk membuat deposit",
+  "subscribeToThe": "Langgan akaun utama",
+  "toViewTheir": "Untuk melihat statistik akaun mereka",
+  "haveEverythingYouNeed": "Mempunyai semua yang anda perlukan",
+  "togetherWithWCG": "Bersama dengan WCG untuk membentuk kumpulan pelanggan yang luas, tidak kira saiz perniagaan anda, anda boleh menggunakan persekitaran perdagangan kami yang sangat baik dengan fungsi yang berlimpah untuk menangani semua keperluan anda.",
+  "excellentTradingEnvironment": "Persekitaran perdagangan yang sangat baik untuk",
+  "toIncreaseYour": "meningkatkan pendapatan anda",
+  "aMultiAccountTradingPlatform": "Platform perdagangan berbilang akaun",
+  "thatCanSatisfy": "yang dapat memenuhi keperluan anda",
+  "theBrokerYouNeed": "Broker yang anda perlukan dengan latar belakang",
+  "backgroundForCooperation": "yang kuat untuk kerjasama dan sokongan",
+  "iWantToBeAManager": "Saya mahu menjadi pengurus   >"
 }
