完成了中级交易课程以及下拉框国际化

--- a/src/i18n/locales/ar/fundManager.json
+++ b/src/i18n/locales/ar/fundManager.json
@@ -1,7 +1,7 @@
 {
   "fundManager": "مدير صندوق استثماري",
   "WCGProvidesAssetManagement": "تقوم WCG بتوفير حلول إدارة الأصول لمديري الصناديق الاستثمارية ، بما في ذلك أداة إدارة الأموال MT4 MAM (إدارة الحسابات المتعددة) الحائزة على جوائز لمساعدة شركائنا على إدارة أموال العملاء بفعالية في بيئة آمنة والنمو جنبًا إلى جنب معنا..",
-  "applyForManager": "قدم لتصبح مدير صندوق استثماري    >",
+  "applyForManager": "قدم لتصبح مدير صندوق استثماري    ",
   "youCanTrade": "يمكنك التداول في السوق من خلال أنظمة حساب مراكز مختلفة. توفر WCG أفضل أدوات التحليل والتداول (يدوية وخوارزمية). بالإضافة إلى ذلك، سنواصل تقديم التحديثات التلقائية للبرامج لتحقيق التشغيل السريع والآمن على أي جهاز..",
   "makeFullUseOfAlgorithms": "قم بالاستفادة الكاملة من الخوارزميات وفرص التداول لإنشاء استراتيجياتك واختبارها وتحسينها. حدد كيفية حساب الوسائط وتحديد المواعيد النهائية وزيادة رأس المال والقيمة ومتطلبات المستثمر الأخرى. إدارة الحسابات وإنشاء تقارير مفصلة لمراقبة نتائج معاملات العملاء بطريقة موحدة. عرض أي بيانات على الرسم البياني، وحساب وإدارة أرصدة التشغيل والنفقات ورسوم المناولة تلقائياً..",
   "WCGCanHelpYourFund": "يمكن لـ WCG مساعدة صندوقك على زيادة دخله: سيتمكن المتداولون لديك من إدراك إمكاناتهم بالكامل وتحقيق أقصى قدر من الأرباح للصندوق، وستجذب نتائجها الإيجابية مستثمرين جدد للانضمام..",
@@ -35,5 +35,5 @@
   "thatCanSatisfy": " منصة تداول متعددة",
   "theBrokerYouNeed": "خلفية قوية للتعاون والدعم",
   "backgroundForCooperation": "الوسيط الذي تحتاجه مع",
-  "iWantToBeAManager": "اريد ان اكون مدير   >"
+  "iWantToBeAManager": "اريد ان اكون مدير   "
 }
