--- a/src/i18n/locales/en/intermediateTrading.json
+++ b/src/i18n/locales/en/intermediateTrading.json
@@ -2,6 +2,8 @@
   "understandChartPatterns": "Understand chart patterns",
   "makeYourTradingMore": "Make your trading more handy by studying historical data and understanding the related chart patterns.",
   "intermediateTradingCourse": "Intermediate Trading Course",
+  "basicTradingCourse": "Basic Trading Course",
+  "advancedTradingCourse": "Advanced Trading Course",
   "mT4Tips": "MT4 tips",
   "riskManagement": "Risk management",
   "howToCreateATradingStrategy": "How to create a trading strategy",
