--- a/src/i18n/locales/ms/fundManager.json
+++ b/src/i18n/locales/ms/fundManager.json
@@ -1,7 +1,7 @@
 {
   "fundManager": "Pengurus dana",
   "WCGProvidesAssetManagement": "WCG menyediakan penyelesaian pengurusan aset untuk pengurus dana, termasuk alat pengurusan dana MT4 MAM (pengurusan pelbagai akaun) yang memenangi anugerah untuk membantu rakan kongsi kami menguruskan dana pelanggan dengan berkesan dalam persekitaran yang selamat dan berkembang berdampingan dengan kami.",
-  "applyForManager": "Memohon pengurus   >",
+  "applyForManager": "Memohon pengurus   ",
   "youCanTrade": "Anda boleh berdagang di pasaran melalui sistem akaun posisi yang berbeza. WCG menyediakan alat analisa dan perdagangan terbaik (manual dan algoritma). Di samping itu, kami akan terus memberikan kemas kini perisian automatik untuk mencapai operasi yang cepat dan selamat di mana-mana peranti.",
   "makeFullUseOfAlgorithms": "Manfaatkan sepenuhnya algoritma dan peluang perdagangan untuk membuat, menguji dan memperbaiki strategi anda. Nyatakan cara mengira parameter, menetapkan tarikh akhir, memaksimumkan modal, nilai dan keperluan pelabur lain. Menguruskan akaun dan menghasilkan laporan terperinci untuk memantau hasil transaksi pelanggan dengan cara yang bersatu. Paparkan data pada grafik, kirakan secara automatik, urus baki operasi, perbelanjaan dan biaya pengendalian.",
   "WCGCanHelpYourFund": "WCG dapat membantu dana anda untuk meningkatkan pendapatannya: pedagang anda akan dapat merealisasikan sepenuhnya potensi mereka dan membawa keuntungan maksimum ke dana tersebut, dan hasil positifnya akan menarik pelabur baru untuk bergabung.",
@@ -35,5 +35,5 @@
   "thatCanSatisfy": "yang dapat memenuhi keperluan anda",
   "theBrokerYouNeed": "Broker yang anda perlukan dengan latar belakang",
   "backgroundForCooperation": "yang kuat untuk kerjasama dan sokongan",
-  "iWantToBeAManager": "Saya mahu menjadi pengurus   >"
+  "iWantToBeAManager": "Saya mahu menjadi pengurus   "
 }
