--- a/src/i18n/locales/vi/iBBroker.json
+++ b/src/i18n/locales/vi/iBBroker.json
@@ -31,5 +31,6 @@
   "yourTotalCommission": "Tổng hoa hồng của bạn",
   "earnCommissionsInstantly": "Kiếm tiền hoa hồng ngay lập tức",
   "becomingAnAgentBroker": "Trở thành đại lý / nhà môi giới sẽ là cách dễ nhất để tăng thu nhập của bạn vì không có chi phí đăng ký. Bạn có thể làm việc ở bất cứ đâu và thậm chí quảng bá dịch vụ của mình thông qua trang web. Đồng thời, bạn có thể trực tiếp giới thiệu khách hàng đến WCG, hướng dẫn họ quy trình mở tài khoản thực và giải thích tất cả những lợi ích khi trở thành khách hàng của WCG.",
-  "iWantToBeAnAgent": "Tôi muốn trở thành một đại lý"
+  "iWantToBeAnAgent": "Tôi muốn trở thành một đại lý",
+  "standard": "chuẩn"
 }
